microseg_cilium/04_構築/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microseg
  labels:
    purpose: nw-zt-n4-microsegmentation
